fix(config): use default_factory for nested dataclasses; example runs via CLI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,5 +15,11 @@ dependencies = [
   "tqdm>=4.0.0"
 ]
 license = { text = "MIT" }
-authors = [{ name="Iván Pérez Digón"}]
+authors = [
+  { name ="Alejandro Dopico-Castro", email = "alejandro.dopico2@udc.es"},
+  { name="Iván Pérez Digón"},
+]
 readme = "README.md"
+
+[project.scripts]
+fedhenet = "federated_rolann.cli:main"
