--- a/.gitignore
+++ b/.gitignore
@@ -191,4 +191,21 @@ cython_debug/
 #  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
-.cursorindexingignore
+.cursorindexingignore# Python
+__pycache__/
+*.pyc
+.venv/
+.env
+.cache/
+*.ipynb_checkpoints/
+
+# Data artifacts
+data/
+datasets/
+*.tar.gz
+*.zip
+*.pt
+*.pth
+
+# Misc
+.DS_Store
