--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,10 @@ dependencies = [
   "paho-mqtt>=1.6.1",
   "tenseal>=0.3.0",
   "tqdm>=4.0.0",
-  "loguru>=0.7.0"
+  "loguru>=0.7.0",
+  "hydra-core>=1.3.2",
+  "codecarbon>=3.0.5",
+  "wandb>=0.22.1",
 ]
 license = { text = "MIT" }
 authors = [
