feat: Add support for float16 and compressions

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -22,7 +22,9 @@ extractor:
   weights: default
 
 algorithm:
-  name: fedavg
+  name: fedhenet
+  compress: true
+  use_float16: true
 
 communication:
   encrypted: false
