--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
   "hydra-core>=1.3.2",
   "codecarbon>=3.0.5",
   "wandb>=0.22.1",
+  "python-dotenv>=1.2.1",
 ]
 license = { text = "MIT" }
 authors = [
